update class and update test